syntax = "proto3";
package DomainServices.ProductService;
option csharp_namespace = "DomainServices.ProductService.Contracts";

message UpdateMortgagePcpIdRequest {
    int64 ProductId = 1;
}
